--- a/views/index.pug
+++ b/views/index.pug
@@ -13,3 +13,6 @@ block content
         clap_count = clap_count + 2;
         document.getElementById("target").innerHTML = 'Clap '+ clap_count +' times';
       }
+
+      - var Jam= ['Jam_flavour','Jam_quantity','Jam_price']
+  a(href='/Jam') Click here to search for Jam
